--- a/css.css
+++ b/css.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    overflow:hidden;
+}
 
 body {
     display: flex;
@@ -11,21 +14,24 @@ body {
     align-items: center;
     font-family: monospace;
     background-color: #1d212b;
+    min-height: 100vh;
+    max-width: 100vw;
+    overflow:hidden;
 }
+
 .main-board {
-    width: 80vw;
-    height: 80vh;
-    margin-top: 10vh;
+    width: 90vw;
+    height: 90vh;
+    max-width: 1024px;
+    margin-top: 3vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     border-radius: 6%;
-    background-color: #151823;
     position: relative;
     color: #fff;
-    font-family: monospace;
-    border: 2px solid white;
+    background-color: #151823;
 }
 .main-board:after {
     position: absolute;
@@ -37,45 +43,49 @@ body {
     height: 100%;
     width: 100%;
     margin: 0 auto;
-    /* -webkit-transform: scale(0.75);
-    transform: scale(0.75); */
     -webkit-filter: blur(5vw);
     -moz-filter: blur(5vw);
     -ms-filter: blur(5vw);
     filter: blur(5vw);
-    background: -webkit-gradient(linear, right top, left top, from(#0fffc1), to(#7e0fff));
-    background: linear-gradient(270deg, #ec780b, #5a0101);
+    background: linear-gradient(270deg, #ec780b, rgb(236,29,35));
     background-size: 200% 200%;
     -webkit-animation: animateGlow 5s ease infinite;
     animation: animateGlow 5s ease infinite;
 
 }
-.stats{
+.stats {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
+
 .board {
-    height: 70vh;
-    width: 70vh;
+    height: 80%;
+    width: 95%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-content: space-around;
+    position: relative;
 
 }
-.board h1{
-    margin-top: 50%;
+.board h1 {
+    position: absolute;
+    top: 50%;
+    text-align: center;
     transform: translateY(-50%);
+    font-size: 40px;
 }
-.box{
-width: 15vh;
-height: 15vh;
-transition: .5s;
+
+.box {
+    width: 24%;
+    height: 14vh;
+    transition: .5s;
 
 }
+
 .card {
     background-image: url(img/marvel.jpg);
     background-size: contain;
@@ -83,61 +93,155 @@ transition: .5s;
     border-radius: 0% 15%;
     border: 2px solid white;
     box-shadow: 1px 1px 2px black;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: rgb(236,29,35);
 }
 
 .card.card-in-tab {
     transform: rotateY(180deg);
-    background-size: contain;
-}
-
-
-.card:disabled {
-    color: transparent;
+    background-color: #fff;
+    background-size: ccontain;
+    background-repeat: no-repeat;
+    background-position: bottom ;
+    border-color: transparent;
+    background-origin: border-box;
 }
 
 button.startGame {
     padding: 10px 20px;
-    background-color: red;
+    background-color: transparent;
     color: white;
-    border: none;
     text-transform: uppercase;
     text-shadow: 1px 1px 2px black;
-    cursor:pointer;
+    cursor: pointer;
     border-radius: 6%;
+    border: 2px dotted black;
+    transition: 0.2s;
 }
-button.startGame:focus{
+
+button.startGame:focus {
     outline: none;
 }
-button.startGame:hover{
-    background-color: orangered;
+
+button.startGame:hover {
+    background-color: rgb(236,29,35);
+    border: 2px solid rgb(236,29,35);
 }
 
 /*ANIMATIONS
  */
- @-webkit-keyframes animateGlow {
-     0% {
-         background-position: 0% 50%;
-     }
+@-webkit-keyframes animateGlow {
+    0% {
+        background-position: 0% 50%;
+        filter: blur(5vw);
+    }
 
-     50% {
-         background-position: 100% 50%;
-     }
+    50% {
+        background-position: 100% 50%;
+        filter: blur(2vw);
+    }
 
-     100% {
-         background-position: 0% 50%;
-     }
- }
+    100% {
+        background-position: 0% 50%;
+        filter: blur(5vw);
+    }
+}
 
- @keyframes animateGlow {
-     0% {
-         background-position: 0% 50%;
-     }
+@keyframes animateGlow {
+    0% {
+        background-position: 0% 50%;
+        filter: blur(5vw);
+    }
 
-     50% {
-         background-position: 100% 50%;
-     }
+    50% {
+        background-position: 100% 50%;
+        filter: blur(2vw);
+    }
 
-     100% {
-         background-position: 0% 50%;
-     }
- }
+    100% {
+        background-position: 0% 50%;
+        filter: blur(5vw);
+    }
+}
+@media(orientation: landscape){
+
+    .board {
+        width: 80%;
+    }
+    .box {
+        width: 25vh;
+        height: 23%;
+        transition: .5s;
+
+    }
+
+    .card.card-in-tab {
+        background-size: contain;
+    }
+    button.startGame {
+        padding: 5px 10px;
+    }
+}
+@media(orientation:portrait) and (min-width: 360px){
+    .main-board {
+        width: 90vw;
+        height: 95vh;
+        margin-top: 2.5vh;
+    }
+}
+@media(orientation: landscape) and (min-width:568px){
+    .board {
+        width: 80%;
+    }
+    .box {
+        width: 23%;
+        height: 23%;
+    }
+    button.startGame {
+        padding: 5px 10px;
+    }
+}
+@media(orientation:portrait) and (min-width:768px){
+    .stats {
+      font-size: 22px;
+    }
+    button.startGame {
+        padding: 12px 22px;
+        font-size: 20px;
+    }
+    .board h1{
+        font-size: 80px;
+    }
+}
+@media(orientation:landscape) and (min-width:1024px){
+    .stats {
+        font-size: 22px;
+      }
+    .board h1{
+        font-size: 100px;
+    }
+    button.startGame {
+        padding: 12px 22px;
+        font-size: 20px;
+    }
+}
+@media(orientation:portrait) and (min-width:1024px){
+    .stats {
+      font-size: 34px;
+    }
+    button.startGame {
+        padding: 16px 26px;
+        font-size: 34px;
+    }
+    .board h1{
+        font-size: 100px;
+    }
+}
+@media(orientation:landscape) and (min-width:1024px){
+    button.startGame {
+        margin-top: 2vh;
+        padding: 12px 22px;
+        font-size: 20px;
+    }
+}
